--- a/BaselineVersion/BaselineVersion.csproj
+++ b/BaselineVersion/BaselineVersion.csproj
@@ -5,6 +5,7 @@
 	  <ImplicitUsings>enable</ImplicitUsings>
 	  <Version>1.0.0</Version>	  
 	  <EnablePackageValidation>true</EnablePackageValidation>
+	  <!--<PackageValidationBaselineVersion>1.0.0</PackageValidationBaselineVersion>-->
   </PropertyGroup>
 
 </Project>
